<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_contact_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/screen_padding">

        <TextView
            android:id="@+id/tv_contact_form_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/contact_form_heading"
            android:textSize="@dimen/heading_large"
            android:textColor="@color/light_blue"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_email_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_contact_form_heading"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/email"
            android:layout_marginTop="@dimen/margin_normal"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_heading"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_message_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Message"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_message_heading"
            android:hint="type message here"
            android:gravity="top"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@+id/cv_contact_form"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="Save"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@color/btn_color_blue"/>

    <TextView
        android:id="@+id/tv_customer_service"
        app:layout_constraintBottom_toTopOf="@+id/tv_contact_details_heading"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/text_small"
        android:text="@string/get_in_touch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_contact_details_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/our_contact_details"
        android:textColor="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@+id/tv_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/site_email"
        app:layout_constraintBottom_toTopOf="@+id/tv_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/org_phone"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>